2003-08-29  Telsa Gwynne <hobbit@aloss.ukuu.org.uk>

	* releasenotes.xml: fix typo

2003-08-27 John Fleck <jfleck@inkstain.net>

	* releasenotes.xml
	* rnepiphany.xml
	* rngucharmap.xml
	* rndesktop.xml
	* rna11y.xml
	* rnstandards.xml
	various edits based on helpful comments from many

2003-08-27  Andrew Sobala  <aes@gnome.org>

	* release-notes.xml: fix typo
	* rncontrolcenter.xml: fix typo

2003-08-27 Luis Villa <louie@ximian.com>

	* rna11y.xml: fix tyop
	* release-notes.xml: wording cleanups
	* rnepiphany.xml: wording cleanups
	* rnpdf.xml: flesh out a touch.
	* rni18n.xml: tyop
	
2003-08-26 John Fleck <jfleck@inkstain.net>

	* rn18n.xml
	add names of translation team leaders

2003-08-25 John Fleck <jfleck@inkstain.net>

	* rni18n.xml
	add list of languages supported as of Aug. 25
	(this'll bear another update before release)
	
2003-08-24 John Fleck <jfleck@inkstain.net>

	* rni18n.xml
	placeholder for discussion of GNOME's translation
	goodness

2003-08-22 John Fleck <jfleck@inkstain.net>

	add
	* rna11y.xml
	edit
	* rngucharmap.xml
	* reale-notes.xml
	add a11y section, stuff from Noah for gucharmap
	section

2003-08-18 John Fleck <jfleck@inkstainn.net>

	add
	* rnnewmaintainers.xml
	add placeholder file for the "welcome to the
	new maintainers" schtick

2003-08-18 John Fleck <jfleck@inkstainn.net>

	add
	* rncontrolcenter.xml
	add control center, various edits

2003-08-17 John Fleck <jfleck@inkstain.net>

	added:
	* rngcalctool.xml
	* rngpdf.xml
	* rngucharmap.xml
	* rnzenity.xml
	various other edits

2003-08-14 John Fleck <jfleck@inkstain.net>

	* *.xml
	finish conversion to xinclude, many edits
	

2003-08-09 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rnepiphany.xml
	add epiphany section

2003-08-05 John Fleck <jfleck@inkstain.net>

	* release-notes.xml
	* rndesktop.xml
	add Nautilus and panel sections, begin conversion to
	use xinclude for the included files

2003-08-02 John Fleck <jfleck@inkstain.net>

	* release-notes.xml