@@ -98,7 +98,7 @@
 	<itemizedlist>
 	  <listitem>
 <para>
-libxml
+libxml2
 </para>
 </listitem>
 <listitem>
@@ -118,12 +118,12 @@ glib
 </listitem>
 <listitem>
 <para>
-linc
+libIDL
 </para>
 </listitem>
 <listitem>
 <para>
-libIDL
+gnome-common
 </para>
 </listitem>
 <listitem>
@@ -138,12 +138,27 @@ intltool
 </listitem>
 <listitem>
 <para>
-bonobo-activation
+libbonobo
 </para>
 </listitem>
 <listitem>
 <para>
-libbonobo
+fontconfig
+</para>
+</listitem>
+<listitem>
+<para>
+Render
+</para>
+</listitem>
+<listitem>
+<para>
+Xrender
+</para>
+</listitem>
+<listitem>
+<para>
+Xft
 </para>
 </listitem>
 <listitem>
@@ -168,27 +183,12 @@ gconf
 </listitem>
 <listitem>
 <para>
-gconf-editor
-</para>
-</listitem>
-<listitem>
-<para>
 gnome-mime-data
 </para>
 </listitem>
 <listitem>
 <para>
 gnome-vfs
-</para>
-</listitem>
-<listitem>
-<para>
-audiofile
-</para>
-</listitem>
-<listitem>
-<para>
-esound
 </para>
 </listitem>
 <listitem>
@@ -228,11 +228,6 @@ libgnomeui
 </listitem>
 <listitem>
 <para>
-libwnck
-</para>
-</listitem>
-<listitem>
-<para>
 startup-notification
 </para>
 </listitem>
@@ -253,7 +248,17 @@ gnome-desktop
 </listitem>
 <listitem>
 <para>
+libwnck
+</para>
+</listitem>
+<listitem>
+<para>
 gnome-panel
+</para>
+</listitem>
+<listitem>
+<para>
+esound
 </para>
 </listitem>
 <listitem>
@@ -283,22 +288,7 @@ libgtop
 </listitem>
 <listitem>
 <para>
-gnome-system-monitor
-</para>
-</listitem>
-<listitem>
-<para>
 gail
-</para>
-</listitem>
-<listitem>
-<para>
-at-spi
-</para>
-</listitem>
-<listitem>
-<para>
-libgail-gnome
 </para>
 </listitem>
 <listitem>
@@ -308,12 +298,7 @@ gnome-applets
 </listitem>
 <listitem>
 <para>
-gnome-utils
-</para>
-</listitem>
-<listitem>
-<para>
-gnome-games
+meta-gnome-core
 </para>
 </listitem>
 <listitem>
@@ -323,17 +308,17 @@ metacity
 </listitem>
 <listitem>
 <para>
-gnome-control-center
+libgsf
+</para>
+</listitem>
+<listitem>
+<para>
+libcroco
 </para>
 </listitem>
 <listitem>
 <para>
 librsvg
-</para>
-</listitem>
-<listitem>
-<para>
-gdm2
 </para>
 </listitem>
 <listitem>
@@ -344,6 +329,16 @@ eel
 <listitem>
 <para>
 nautilus
+</para>
+</listitem>
+<listitem>
+<para>
+gnome-control-center
+</para>
+</listitem>
+<listitem>
+<para>
+meta-nautilus
 </para>
 </listitem>
 <listitem>
@@ -373,12 +368,22 @@ libgnomeprintui
 </listitem>
 <listitem>
 <para>
+gtksourceview
+</para>
+</listitem>
+<listitem>
+<para>
 gedit
 </para>
 </listitem>
 <listitem>
 <para>
 eog
+</para>
+</listitem>
+<listitem>
+<para>
+gob
 </para>
 </listitem>
 <listitem>
@@ -398,7 +403,32 @@ file-roller
 </listitem>
 <listitem>
 <para>
+gconf-editor
+</para>
+</listitem>
+<listitem>
+<para>
+gnome-utils
+</para>
+</listitem>
+<listitem>
+<para>
+gal
+</para>
+</listitem>
+<listitem>
+<para>
+procman
+</para>
+</listitem>
+<listitem>
+<para>
 gstreamer
+</para>
+</listitem>
+<listitem>
+<para>
+gnome-media
 </para>
 </listitem>
 <listitem>
@@ -409,6 +439,81 @@ gst-plugins
 <listitem>
 <para>
 nautilus-media
+</para>
+</listitem>
+<listitem>
+<para>
+gcalctool
+</para>
+</listitem>
+<listitem>
+<para>
+gpdf
+</para>
+</listitem>
+<listitem>
+<para>
+gucharmap
+</para>
+</listitem>
+<listitem>
+<para>
+nautilus-cd-burner
+</para>
+</listitem>
+<listitem>
+<para>
+zenity
+</para>
+</listitem>
+<listitem>
+<para>
+gnome-speech
+</para>
+</listitem>
+<listitem>
+<para>
+at-spi
+</para>
+</listitem>
+<listitem>
+<para>
+gnome-mag
+</para>
+</listitem>
+<listitem>
+<para>
+linc
+</para>
+</listitem>
+<listitem>
+<para>
+gnopernicus
+</para>
+</listitem>
+<listitem>
+<para>
+gok
+</para>
+</listitem>
+<listitem>
+<para>
+mozilla
+</para>
+</listitem>
+<listitem>
+<para>
+epiphany
+</para>
+</listitem>
+<listitem>
+<para>
+gnomemeeting
+</para>
+</listitem>
+<listitem>
+<para>
+gnome-games
 </para>
 </listitem>
 <listitem>
