@@ -1,3 +1,8 @@
+2003-08-29 John Fleck <jfleck@inkstain.net>
+
+	* rninstallation.xml
+	update build order
+
 2003-08-29  Telsa Gwynne <hobbit@aloss.ukuu.org.uk>
 
 	* releasenotes.xml: fix typo
